--- a/ML_DL/Untitled.ipynb
+++ b/ML_DL/Untitled.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "2055e372",
+   "execution_count": 3,
+   "id": "10f8a58e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,8 +16,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "b76fa684",
+   "execution_count": 4,
+   "id": "040a2776",
    "metadata": {},
    "outputs": [
     {
@@ -234,7 +234,7 @@
        "29             10.5  121872.0"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -246,8 +246,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "8b1191be",
+   "execution_count": 5,
+   "id": "d56f18af",
    "metadata": {},
    "outputs": [
     {
@@ -410,7 +410,7 @@
        "20          21.50             5"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -422,8 +422,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "afa8166b",
+   "execution_count": 6,
+   "id": "dbcf8262",
    "metadata": {},
    "outputs": [
     {
@@ -449,17 +449,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "3fb83431",
+   "execution_count": 7,
+   "id": "8800d932",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.FacetGrid at 0x1e3509b2790>"
+       "<seaborn.axisgrid.FacetGrid at 0x196cf93af40>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -480,8 +480,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "5753751b",
+   "execution_count": 8,
+   "id": "5674f10e",
    "metadata": {},
    "outputs": [
     {
@@ -530,7 +530,7 @@
        "Sorting Time        0.825997      1.000000"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -541,8 +541,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "16efebab",
+   "execution_count": 9,
+   "id": "699a09a6",
    "metadata": {},
    "outputs": [
     {
@@ -551,7 +551,7 @@
        "<AxesSubplot:xlabel='Sorting Time', ylabel='Delivery Time'>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -563,8 +563,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "b2fe8f18",
+   "execution_count": 14,
+   "id": "8a269537",
    "metadata": {},
    "outputs": [
     {
@@ -575,7 +575,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -587,8 +587,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "a3c4c4e3",
+   "execution_count": 13,
+   "id": "1997a6bd",
    "metadata": {},
    "outputs": [
     {
@@ -751,7 +751,7 @@
        "20          21.50             5"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -763,8 +763,139 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 11,
+   "id": "35887a4b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "14.5"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Model prediction for sorting time 5\n",
+    "delivery_time = 6.5+1.6*5\n",
+    "delivery_time"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "326b9681",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    5\n",
+       "1    8\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# prediction for sorting time 5,8\n",
+    "new_data = pd.Series([5,8])\n",
+    "new_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "70cc0b62",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>sorting_time</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   sorting_time\n",
+       "0             5\n",
+       "1             8"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Data Prediction\n",
+    "data_prediction = pd.DataFrame(new_data, columns=['sorting_time'])\n",
+    "data_prediction"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "22530b23",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    14.827833\n",
+       "1    19.774893\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.predict(data_prediction)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "02435da9",
+   "id": "57575101",
    "metadata": {},
    "outputs": [],
    "source": []
